Fix z-index and transitions for sidepanels (#442)
* Fix z-index and transitions for sidepanels

* Notify discord on dev release

--- a/css/modals.scss
+++ b/css/modals.scss
@@ -46,37 +46,31 @@
 }
 
 .modal-transition-left {
-  opacity: 0;
-  transition: all 300ms ease-in-out;
-  transform: translateX(-50px);
+  transition: transform 300ms ease-in-out;
+  transform: translateX(-30rem);
 }
 
 /* stylelint-disable-next-line selector-class-pattern */
 .modal-transition-left--after-open {
-  opacity: 1;
   transform: translateX(0);
 }
 
 /* stylelint-disable-next-line selector-class-pattern */
 .modal-transition-left--before-close {
-  opacity: 0;
-  transform: translateX(-50px);
+  transform: translateX(-30rem);
 }
 
 .modal-transition-right {
-  opacity: 0;
-  transition: all 300ms ease-in-out;
-  transform: translateX(100px);
+  transition: transform 300ms ease-in-out;
+  transform: translateX(30rem);
 }
 
 /* stylelint-disable-next-line selector-class-pattern */
 .modal-transition-right--after-open {
-  opacity: 1;
   transform: translateX(0);
 }
 
 /* stylelint-disable-next-line selector-class-pattern */
 .modal-transition-right--before-close {
-  opacity: 0;
-  transform: translateX(100px);
+  transform: translateX(30rem);
 }
